# transformer-lab

./: .env.example  .gitignore  LICENSE  NOTEBOOK_USAGE.md  README.md  config.py  dataset.py  decoder_block.py  encoder_block.py  input_embedding.py  layer_normalization.py  meeting_summarization_training.ipynb  neptune_board.py  positional_encoding.py  projection_layer.py  pyproject.toml  residual_connection.py  train.py  transformer_model.py
configs/: config.yaml
configs/attention/: csa.yaml  csa_flash.yaml  csa_pro.yaml  gemma3_hybrid.yaml  gqa.yaml  gqa_rope.yaml  hca.yaml  hca_flash.yaml  hca_pro.yaml  mha.yaml  mla.yaml  mqa.yaml  sliding_gqa.yaml  sliding_window.yaml
configs/connection/: hyperconnection.yaml  mhc.yaml  residual.yaml  residual_sandwich.yaml
configs/data/: c4.yaml  fineweb_edu.yaml  fineweb_edu_100bt.yaml  meetingbank.yaml  multi_news.yaml  wikipedia.yaml  wikitext.yaml
configs/experiment/: meeting_summarization_causal.yaml  meeting_summarization_mhc.yaml  (+4 more)
kl-experiments/: kl.py  kl1.py
multi_head_attention_components/: __init__.py  decoder_block.py  encoder_block.py  multihead_attention.py
scripts/: sweep_meeting_summarization.sh
src/: __init__.py  registry.py
tests/: conftest.py  test_attention_capabilities.py  test_block_shapes.py  test_builder_compose.py  test_causal_lm.py  test_connection_round_trip.py  test_meetingbank_causal.py  test_registry_instantiation.py  test_rope.py
utils/: __init__.py  feed_forward.py  hyper_connection.py  kv_cache.py  layer_normalization.py  mhc.py  projection_layer.py  residual_connection.py
(+98 files in other folders)
